# gRPC-Calculator-Service

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  docker-compose.yml
db/: schema.sql
proto/: calculator.proto
src/client/: client.cpp
src/server/: Dockerfile  OperationRepository.cpp  OperationRepository.h  server.cpp
